# logcolor

./: .travis.yml  CMakeLists.txt  README.md  index.md  logcolor.h  main.cpp
